--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "bootstrap": "5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "2.9.1",
-    "react-dom": "^18.2.0",
-    "react-router": "1.0.0",
+    "react-router-dom": "6.21.0",
     "react-router-bootstrap": "0.26.2"
   },
   "devDependencies": {
