--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "eslint": "eslint src __tests__",
-    "prettier": "prettier --cache --write \"src/**/*.ts\" \"__tests__/**/*.ts\""
+    "prettier": "prettier --cache --write \"src/**/*.ts\" \"__tests__/**/*.ts\"",
+    "test": "vitest --coverage"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "6.5.1",
@@ -19,8 +20,8 @@
     "bootstrap": "5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "2.9.1",
-    "react-router-dom": "6.21.0",
-    "react-router-bootstrap": "0.26.2"
+    "react-router-bootstrap": "0.26.2",
+    "react-router-dom": "6.21.0"
   },
   "devDependencies": {
     "@jest/globals": "29.7.0",
@@ -31,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "6.13.2",
     "@typescript-eslint/parser": "6.13.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitest/coverage-v8": "1.1.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-eslint-comments": "3.2.0",
@@ -46,6 +48,7 @@
     "jest-config": "29.7.0",
     "prettier": "3.1.0",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vitest": "1.1.0"
   }
 }
