--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "6.5.1",
     "@fortawesome/react-fontawesome": "0.2.0",
     "axios": "1.6.2",
+    "axios-mock-adapter": "1.22.0",
     "bootstrap": "5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "2.9.1",
