--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "eslint": "eslint src __tests__",
     "prettier": "prettier --cache --write \"src/**/*.ts\" \"__tests__/**/*.ts\"",
-    "test": "vitest --coverage"
+    "test": "vitest --coverage",
+    "revealjs": "asciidoctor-revealjs ./doc/folien.adoc"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "6.5.1",
@@ -20,10 +21,11 @@
     "bootstrap": "5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "2.9.2",
-    "react-router-dom": "6.21.1",
-    "react-router-bootstrap": "0.26.2"
+    "react-router-bootstrap": "0.26.2",
+    "react-router-dom": "6.21.1"
   },
   "devDependencies": {
+    "@asciidoctor/reveal.js": "5.1.0",
     "@jest/globals": "29.7.0",
     "@jest/types": "29.6.3",
     "@types/react": "^18.2.45",
@@ -33,6 +35,7 @@
     "@typescript-eslint/parser": "6.17.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "1.1.1",
+    "asciidoctor": "3.0.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-eslint-comments": "3.2.0",
